--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,24 @@
 
 <script>
 
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    if(!audio) return; // Stop the function from running off altogether
+    audio.currentTime = 0; // Rewind to the start 
+    audio.play(); 
+    key.classList.add('playing');
+  }
+
+  function removeTransition(e) {
+    if(e.propertyName !== 'transform') return; // Skip if not a transition  transform
+    this.classList.remove('playing'); 
+  }
+
+  const keys = document.querySelectorAll('.key'); 
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition)); 
+
+  window.addEventListener('keydown', playSound); 
 </script>
 
 
