Add Javascript for drumn playing

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -69,7 +69,7 @@
   }
 
   function removeTransition(e) {
-    if(e.propertyName !== 'transform') return; // Skip if not a transition  transform
+    if(e.propertyName !== 'transform') return; // Skip if not a transition
     this.classList.remove('playing'); 
   }
 
