--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,34 @@
       background:black;
       position: absolute;
       top:50%;
-    }
-
+      transform-origin: 100%; /* account for rotation at end of line */ 
+      transform: rotate(90deg); /* account for clock handle to start at 12am mark */
+      transition: all 0.05s; /* allow clock to transition by each 0.05s */ 
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    } 
   </style>
 
   <script>
+  /* Javascript to update clock */
+  const secondHand = document.querySelector('.second-hand');
+  const minHand = document.querySelector('.min-hand'); 
+  const hourHand = document.querySelector('.hour-hand'); 
+  // Grabs the date and time 
+  function setDate() {
+    const now = new Date();
+    const seconds = now.getSeconds(); 
+    const secondsDegrees = ((seconds / 60) * 360) + 90; 
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
 
+    const mins = now.getMinutes(); 
+    const minDegrees = ((mins / 60) * 360) + 90;
+    minHand.style.transform = `rotate(${minDegrees}deg)`;
 
+    const hours = now.getHours(); 
+    const hourDegrees = ((hours / 12) * 360) + 90;
+    hourHand.style.transform = `rotate(${hourDegrees}deg)`; 
+  }
+  setInterval(setDate, 1000);
   </script>
 </body>
 </html>
